src/upl.parser.global.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Language: peg$parseLanguage },
        peg$startRuleFunction  = peg$parseLanguage,

        peg$c0 = function(shebang, token1, header, token2, body, token3) { return {type:"Language",header,body,footer:get_metrics(),seed:text()}},
        peg$c1 = "#!",
        peg$c2 = peg$literalExpectation("#!", false),
        peg$c3 = function(declarations) { return { type: "Preblock", declarations, script: text().length, location: minify_location(location()) } },
        peg$c4 = function(functions) { return pack_declarations(functions) },
        peg$c5 = "=",
        peg$c6 = peg$literalExpectation("=", false),
        peg$c7 = function(token1, shortcut, token2, name) { return declare_function_shortcut(shortcut, name) },
        peg$c8 = function(sentences) { return sentences },
        peg$c9 = function(sentence) { return sentence },
        peg$c10 = peg$anyExpectation(),
        peg$c11 = " ",
        peg$c12 = peg$literalExpectation(" ", false),
        peg$c13 = "\t",
        peg$c14 = peg$literalExpectation("\t", false),
        peg$c15 = "\r\n",
        peg$c16 = peg$literalExpectation("\r\n", false),
        peg$c17 = "\r",
        peg$c18 = peg$literalExpectation("\r", false),
        peg$c19 = "\n",
        peg$c20 = peg$literalExpectation("\n", false),
        peg$c21 = "comment{{",
        peg$c22 = peg$literalExpectation("comment{{", false),
        peg$c23 = "}}",
        peg$c24 = peg$literalExpectation("}}", false),
        peg$c25 = function(token1, comment, token3) { return comment },
        peg$c26 = function(origin, extended_by) { return extended_by.length ? Object.assign(origin, { extended_by }) : origin },
        peg$c27 = ".",
        peg$c28 = peg$literalExpectation(".", false),
        peg$c29 = function(token1, access) { return { type: "Access_by_dot_appendix", access, script: text().length, location: minify_location(location()) } },
        peg$c30 = function(access) { return { type: "Access_by_accessor_appendix", access, script: text().length, location: minify_location(location()) } },
        peg$c31 = function(parameters) { return parameters; },
        peg$c32 = function(operator, pipe) { return { type: "Pipe_appendix", operator, pipe, script: text().length, location: minify_location(location()) } },
        peg$c33 = function(token1, op, token2) { return text().trim() },
        peg$c34 = function(first, others) { return [first].concat(others || []) },
        peg$c35 = function(token1, word) { return word },
        peg$c36 = "|[",
        peg$c37 = peg$literalExpectation("|[", false),
        peg$c38 = "]",
        peg$c39 = peg$literalExpectation("]", false),
        peg$c40 = "|@",
        peg$c41 = peg$literalExpectation("|@", false),
        peg$c42 = "|=",
        peg$c43 = peg$literalExpectation("|=", false),
        peg$c44 = "|",
        peg$c45 = peg$literalExpectation("|", false),
        peg$c46 = function(op) { return text() },
        peg$c47 = function(chars) { return chars.join("") },
        peg$c48 = function(neg, ch) { return ch },
        peg$c49 = "\\]",
        peg$c50 = peg$literalExpectation("\\]", false),
        peg$c51 = function() { return "]" },
        peg$c52 = "[",
        peg$c53 = peg$literalExpectation("[", false),
        peg$c54 = function(token1, properties, token2) { return { type: "Object", supertype: "Generative", properties: properties || [], script: text().length, location: minify_location(location()) } },
        peg$c55 = "object{",
        peg$c56 = peg$literalExpectation("object{", false),
        peg$c57 = "}",
        peg$c58 = peg$literalExpectation("}", false),
        peg$c59 = function(token1, key, token2, val) { return { key, val } },
        peg$c60 = function(token1, prop) { return prop },
        peg$c61 = function(token1, generative, token2) { return generative },
        peg$c62 = "@",
        peg$c63 = peg$literalExpectation("@", false),
        peg$c64 = function(token1, name) { return { type: "Variable", supertype: "Generative", name, script: text().length, location: minify_location(location()) } },
        peg$c65 = function(base, atoms) { return { type: "Covalent_molecule", supertype: "Generative", base, atoms, script: text().length, location: minify_location(location()) } },
        peg$c66 = function(atoms) { return simplify_molecule_type({ type: "Functional_molecule", atoms, script: text().length, location: minify_location(location()) }) },
        peg$c67 = function(name, parameters) { return { type: "Functional_atom", name, parameters, script: text().length, location: minify_location(location()) } },
        peg$c68 = function(atom_id) { return add_functional_atom_mention(atom_id) },
        peg$c69 = "#",
        peg$c70 = peg$literalExpectation("#", false),
        peg$c71 = function(token1, name) { return name },
        peg$c72 = function(token1, aliased) { return { type: "Function_name_by_shortcut", id: resolve_function_shortcut(aliased), aliased, script: text().length, location: minify_location(location()) } },
        peg$c73 = function(name) { return { type: "Function_name_by_word", id: name, aliased: null, script: text().length, location: minify_location(location()) } },
        peg$c74 = function(first, others) { return [first].concat(others || []).join(" ") },
        peg$c75 = "{",
        peg$c76 = peg$literalExpectation("{", false),
        peg$c77 = function(token1, parameters, token2) { return { type: "Function_call_appendix_for_list_parameter", list: parameters || [], script: text().length, location: minify_location(location()) } },
        peg$c78 = "!",
        peg$c79 = peg$literalExpectation("!", false),
        peg$c80 = function(token1) { return { type: "Function_call_appendix_for_empty_parameter", script: text().length, location: minify_location(location()) } },
        peg$c81 = function(parameter) { return parameter },
        peg$c82 = /^[A-Za-z\xC1\xC9\xCD\xD3\xDA\xE1\xE9\xED\xF3\xFA\xC0\xC8\xCC\xD2\xD9\xE0\xE8\xEC\xF2\xF9\xC4\xCB\xCF\xD6\xDC\xE4\xEB\xEF\xF6\xFC\xC2\xCA\xCE\xD4\xDB\xE2\xEA\xEE\xF4\xFB\xF1\xB7\xE7'\-_$]/,
        peg$c83 = peg$classExpectation([["A", "Z"], ["a", "z"], "\xC1", "\xC9", "\xCD", "\xD3", "\xDA", "\xE1", "\xE9", "\xED", "\xF3", "\xFA", "\xC0", "\xC8", "\xCC", "\xD2", "\xD9", "\xE0", "\xE8", "\xEC", "\xF2", "\xF9", "\xC4", "\xCB", "\xCF", "\xD6", "\xDC", "\xE4", "\xEB", "\xEF", "\xF6", "\xFC", "\xC2", "\xCA", "\xCE", "\xD4", "\xDB", "\xE2", "\xEA", "\xEE", "\xF4", "\xFB", "\xF1", "\xB7", "\xE7", "'", "-", "_", "$"], false, false),
        peg$c84 = /^[A-Za-z0-9\xC1\xC9\xCD\xD3\xDA\xE1\xE9\xED\xF3\xFA\xC0\xC8\xCC\xD2\xD9\xE0\xE8\xEC\xF2\xF9\xC4\xCB\xCF\xD6\xDC\xE4\xEB\xEF\xF6\xFC\xC2\xCA\xCE\xD4\xDB\xE2\xEA\xEE\xF4\xFB\xF1\xB7\xE7'\-_$]/,
        peg$c85 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "\xC1", "\xC9", "\xCD", "\xD3", "\xDA", "\xE1", "\xE9", "\xED", "\xF3", "\xFA", "\xC0", "\xC8", "\xCC", "\xD2", "\xD9", "\xE0", "\xE8", "\xEC", "\xF2", "\xF9", "\xC4", "\xCB", "\xCF", "\xD6", "\xDC", "\xE4", "\xEB", "\xEF", "\xF6", "\xFC", "\xC2", "\xCA", "\xCE", "\xD4", "\xDB", "\xE2", "\xEA", "\xEE", "\xF4", "\xFB", "\xF1", "\xB7", "\xE7", "'", "-", "_", "$"], false, false),
        peg$c86 = function() { return text() },
        peg$c87 = function(n) { return { type: "Number", supertype: "Generative", value: n, script: text().length, location: minify_location(location()) } },
        peg$c88 = "-",
        peg$c89 = peg$literalExpectation("-", false),
        peg$c90 = /^[0-9]/,
        peg$c91 = peg$classExpectation([["0", "9"]], false, false),
        peg$c92 = function(polarity, num, dec) { return dec ? parseFloat(text()) : parseInt(text()) },
        peg$c93 = function(t) { return { type: "Text", supertype: "Generative", contents: t, script: text().length, location: minify_location(location()) } },
        peg$c94 = function(token1, contents, token2) { return contents },
        peg$c95 = "\"",
        peg$c96 = peg$literalExpectation("\"", false),
        peg$c97 = "\\\"",
        peg$c98 = peg$literalExpectation("\\\"", false),
        peg$c99 = function() { return '"' },
        peg$c100 = "\\}}",
        peg$c101 = peg$literalExpectation("\\}}", false),
        peg$c102 = function() { return /*{{*/ "}}" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseLanguage() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseShebang_for_linux();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parse_();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parse_();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsePreblock();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parse_();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parse_();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseBlock();
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parse_();
                while (s7 !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$parse_();
                }
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c0(s1, s2, s3, s4, s5, s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseShebang_for_linux() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c1) {
        s1 = peg$c1;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNo_EOL();
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsePreblock() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseDeclare_function_shortcuts();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseDeclare_function_shortcuts() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseDeclare_function_shortcut();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseDeclare_function_shortcut();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseDeclare_function_shortcut() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseFunction_name_by_shortcut_without_resolving();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = [];
          s5 = peg$parse_();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 61) {
              s5 = peg$c5;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parse_();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parse_();
              }
              if (s6 !== peg$FAILED) {
                s4 = [s4, s5, s6];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseFunction_name_by_word_without_packing();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c7(s1, s2, s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseBlock() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseFull_sentence();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseFull_sentence();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c8(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseFull_sentence() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseGenerative_extended();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEOS();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c9(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseEOS() {
      var s0;

      s0 = peg$parse___();
      if (s0 === peg$FAILED) {
        s0 = peg$parseEOF();
      }

      return s0;
    }

    function peg$parseEOF() {
      var s0, s1;

      s0 = peg$currPos;
      peg$silentFails++;
      if (input.length > peg$currPos) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      peg$silentFails--;
      if (s1 === peg$FAILED) {
        s0 = void 0;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parse_() {
      var s0;

      s0 = peg$parse__();
      if (s0 === peg$FAILED) {
        s0 = peg$parse___();
        if (s0 === peg$FAILED) {
          s0 = peg$parseComment_group();
        }
      }

      return s0;
    }

    function peg$parse__() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c11;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 9) {
          s0 = peg$c13;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
      }

      return s0;
    }

    function peg$parse___() {
      var s0;

      if (input.substr(peg$currPos, 2) === peg$c15) {
        s0 = peg$c15;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 13) {
          s0 = peg$c17;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c18); }
        }
        if (s0 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 10) {
            s0 = peg$c19;
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c20); }
          }
        }
      }

      return s0;
    }

    function peg$parseComment_group() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 9) === peg$c21) {
        s1 = peg$c21;
        peg$currPos += 9;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c22); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseContents_between_double_curly_brackets();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c23) {
            s3 = peg$c23;
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c24); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c25(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseGenerative_extended() {
      var s0, s1, s2, s3;
